mykube-kusto/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myredis
  namespace: mykube
spec:
  selector:
    app: myredis
  ports:
  - protocol: TCP
    port: 5080
    targetPort: 6379
