mykube-kusto/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /mysql
        backend:
          service:
            name: mysql
            port: 
              number: 5070
      - pathType: Prefix
        path: /myredis
        backend:
          service:
            name: myredis
            port: 
              number: 5080
      - pathType: Prefix
        path: /mongo
        backend:
          service:
            name: mymongo
            port:
              number: 5090
